bootstrap/tests/errors/undefined_var.bmb
// Error test: Undefined variable
// Expected error: not defined or undefined
fn main() -> i64 = undefined_var;
